<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="contentDesc"></string>
    <string name="upload">Upload</string>
    <string name="digits_restriction">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz -_.,01234567879()@</string>
    <string name="queue_rename">Enter a new name for your data set:</string>
    <string name="queue_alter">What would you like to do with this data set?</string>
    <string name="rename">Rename</string>
    <string name="change_data">Change Data</string>
    <string name="delete">Delete</string>
    <string name="numbers_restriction">1234567890.-</string>
    <string name="select_proj">Select Project</string>
    <string name="browse">Browse</string>
    <string name="scan_qr">Scan QR</string>
    <string name="chooseProject">Enter Project ID:</string>
    <string name="noProjectYet">Don\'t have a project yet?</string>
    <string name="createProject">Create New Project</string>
    <string name="createProjectButton">Create Project</string>
    <string name="search">Search</string>
    <string name="project_no_items">No projects were found.</string>
    <string name="visit">Visit</string>
    <string name="qr_prompt">Your device does not have the proper Barcode Scanner application installed
		to use this feature.  However, you may visit the Google Play store to download 
		this application (\"Barcode Scanner\" by the Zxing Team).</string>
    <string name="loading">Loading&#x2026;</string>
    <string name="or">OR</string>
    <string name="placeholder_breadcrumb">Breadcrumbs > Placeholder</string>
    <string name="contentDescBack">Back</string>
    <string name="prompt">Select which data sets you would like to upload to iSENSE.
	    \n\t&#8226; Tap data sets to enable/disable them for upload.
	    \n\t&#8226; Long press a data set to reconfigure it.</string>
    <string name="type_data">Type: Data</string>
    <string name="type_picture">Type: Picture</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="sure_delete_selected">Are you sure you would like to delete all selected data sets? 
         Selected data sets are the ones highlighted green.
    </string>

    <!-- SyncTime -->
    <string name="syncTime">Synchronizing time is useful when using multiple devices to record data at the
	    same time.  By default, many Android devices\' clocks will not match one
	    another\'s, thus making recording data at similar times difficult.  However,
	    you have a choice to fix this issue by setting a device as a \"host\".
	    This can be done by hitting the \"Send\" button.  Upon hitting \"Send\", 
	    the time from that particular Android device will be broadcasted as a \"timeframe\"
	    that all other phones in the local network can receive.  However, in order for
	    a phone to receive a broadcasted time, that phone must be currently in 
	    receive-mode, which can be done by hitting \"Receive\".  In other words, if
	    you intend on receiving a host\'s time, you must be in receive-mode before the
	    host hits \"Send\". (By default, \"Send\" will also receive the time that you have 
	    broadcasted, should you be the host).  After pressing either \"Send\" or 
	    \"Receive\", a dialog box will tell you the time that has been received from
	    the host, along with the millisecond offset between
	    the received time and your Android device\'s actual clock.  If you do choose 
	    to synchronize time, recording data will now work off of the host\'s timeframe.
	    This now allows for simultaneous data recording across multiple devices at the 
	    same time.  Please note: synchronizing time will only work if all the Android
	    devices are connected to the same WiFi network.  Mobile plans (e.g. 3G or 4G)
	    generally will not allow for synchronizing time.  Also, synchronizing time may not be
	    allowed on some WiFi networks, but it generally works on small, password-secured 
	    WiFi networks.  Should you want to revert to your phone\'s local timestamp, you
	    can use the \"Reset\" button.</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="timeFailed">Failed to synchronize time.  You may try again.</string>
    <string name="retry">Try Again</string>
    <string name="instructions"><u>Instructions:</u></string>
    <string name="reset">Reset</string>
    <string name="no_initial_proj">        One or more of the data sets you have selected to upload have no associated project.  This is indicated by the text that
        states \"No Project\" with each associated data set.  In order to upload these data sets, press and hold the data
        sets with no associated project and select \"Select Project\" to associate the data set with a project.</string>

    <!-- Field matching -->
    <string name="isense_fields">Fields</string>
    <!-- Field matching array: make sure the items here are equivalent to the fields in fieldname.xml -->
    <string-array name="isense_fields_array">
        <item></item>
        <item>Time</item>
        <item>Accel-X</item>
        <item>Accel-Y</item>
        <item>Accel-Z</item>
        <item>Accel-Magnitude</item>
        <item>Latitude</item>
        <item>Longitude</item>
        <item>Magnetic-X</item>
        <item>Magnetic-Y</item>
        <item>Magnetic-Z</item>
        <item>Magnetic-Magnitude</item>
        <item>Angle (Degrees)</item>
        <item>Angle (Radians)</item>
        <item>Temp. (Celsius)</item>
        <item>Pressure</item>
        <item>Altitude</item>
        <item>Light</item>
        <item>Temp. (Fahrenheit)</item>
        <item>Temp. (Kelvin)</item>
    </string-array>

    <string name="field_matching_text">Match the project\'s fields (left) with fields that this app can record data for 
        (dropdowns on the right).  If no match is
        available, leave the drop down blank.
    </string>
    <string name="project_field">Project Field</string>
    <string name="back">Back</string>
    <string name="username">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="first_name">First Name:</string>
    <string name="last_initial">Last Initial:</string>
    <string name="def_username">Mobile</string>
    <string name="def_last_initial">U.</string>
    <string name="use_isense_name">Use iSENSE Account Name:</string>
    <string name="enter_name_prompt">Please Enter Your Name</string>
    <string name="login_error_prompt">Login Failed</string>
    <string name="login_prompt">Login to iSENSE</string>
    
    <string name="always_prompt_first_name">Always prompt for first name and last initial</string>
	<string name="classroom_mode">Classroom Mode</string>
	
	<!-- Project Create -->
    <string name="field_type">Add Field</string>
    <string-array name="field_type_array">
        <item>Timestamp</item>
        <item>Number</item>
        <item>Text</item>
        <item>Location</item>
    </string-array>
    <string name="field_name">field name</string>
    <string name="units">units</string>
    <string name="deg">deg</string>
    <string name="new_proj_name">New Project Name</string>
    <string name="how_to_add_field">Select a field type from the drop down menu below to add a new field to your project.</string>
    <string name="blank_desc"></string>
    <string name="login_success">Login Successful</string>
	<string name="please_enter_proj_name">Please enter a new project name</string>
	<string name="please_enter_field">Please enter at least one field for your project</string>
	<string name="please_enter_name_field">Please enter a name for field #</string>
	<string name="one_location_only">Cannot add more than one location</string>
	<string name="one_timestamp_only">Cannot add more than one timestamp</string>
	<string name="login_isense_first">Please login to iSENSE first</string>
	<string name="project_failed_create">Project failed to create - please try again</string>
	<!-- End Project Create -->
	
	<!-- Action Bar -->
	<string name="two_more_taps">2 more taps to enter\u0020</string>
	<string name="one_more_tap">1 more tap to enter\u0020</string>
	<string name="now_in_mode">Now in\u0020</string>
	<string name="mode_type">\u0020mode</string>
	<!-- End Action Bar -->
	
	<string name="credential_manager">Credential Manager</string>
	<string name="add_key">Add Contributor Key</string>
	<string name="key">Contributor Key:</string>
	<string name="key_info">A contributor key allows you to contribute data to a specific project without an iSense account.</string>
	<string name="selectProject">Select a Project</string>
	<string name="contribute"><u>You Can Contribute To:</u></string>
	<string name="credentials"><u>Credentials</u></string>
	<string name="logged_in">Logged in as:</string>
	<string name="user_img_desc">iSense Gravatar</string>
	<string name="logout">Log out</string>
	<string name="browse_proj">Browse Projects</string>
	<string name="proj">Project:</string>
	<string name="contributor">Contributor Name:</string>
	
    
</resources>