<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textview_use_isense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkbox_use_isense_name"
        android:layout_margin="5dp"
        android:text="@string/use_isense_name" />

    <CheckBox
        android:id="@id/checkbox_use_isense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/textview_use_isense_name"
        android:checked="true" />

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_name"
        android:layout_margin="5dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_use_isense_name"
        android:layout_toRightOf="@id/textview_name"
        android:digits="@string/digits_restriction"
        android:enabled="false"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:maxLength="12"
        android:text="@string/def_username" />

    <TextView
        android:id="@+id/textview_initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_initial"
        android:layout_margin="5dp"
        android:text="@string/last_initial" />

    <EditText
        android:id="@id/edittext_initial"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edittext_name"
        android:layout_below="@id/edittext_name"
        android:digits="@string/digits_restriction"
        android:enabled="false"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:maxLength="1"
        android:singleLine="true"
        android:text="@string/def_last_initial" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_initial"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>

</RelativeLayout>