<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logged_in"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageViewPerson"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Title"
        android:layout_margin="10dp"
        android:contentDescription="@string/user_img_desc"
        android:src="@drawable/progress_small" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageViewPerson"
        android:layout_marginRight="10dp"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/textViewPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonLogout"
        android:layout_toLeftOf="@+id/buttonLogout"
        android:layout_toRightOf="@+id/imageViewPerson"
        android:gravity="center"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
