<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Light"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="Overdraw,UnusedResources" >

    <EditText
        android:id="@+id/ExperimentSearchInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:digits="@string/digits_restriction"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:textColor="#000000"
        android:layout_marginBottom="10dp" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:cacheColorHint="@android:color/white"
        android:focusable="true" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/project_no_items" />

</LinearLayout>