<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/credentials"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_alignBottom="@+id/edittext_username"
        android:layout_margin="5dp"
        android:text="@string/username" />
    
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_title"
        android:layout_toRightOf="@+id/textview_username"
        android:digits="@string/digits_restriction"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_password"
        android:layout_margin="5dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edittext_username"
        android:layout_toRightOf="@id/textview_password"
        android:digits="@string/digits_restriction"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="40"
        android:paddingLeft="6dip"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>

    

</RelativeLayout>