<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textview_key_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:text="@string/key_info"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edittext_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textview_key_info"
        android:layout_below="@+id/textview_contributor"
        android:layout_toRightOf="@+id/textview_contributor"
        android:digits="@string/digits_restriction"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_key"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="@android:string/ok" />
    </LinearLayout>

    <EditText
        android:id="@+id/edittext_contributor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edittext_key"
        android:layout_below="@+id/textview_key_info"
        android:layout_toRightOf="@+id/textview_contributor"
        android:digits="@string/digits_restriction"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textview_contributor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_contributor"
        android:layout_alignLeft="@+id/textview_key_info"
        android:layout_margin="5dp"
        android:text="@string/contributor" />

    <TextView
        android:id="@+id/textview_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_key"
        android:layout_alignLeft="@+id/textview_key_info"
        android:layout_margin="5dp"
        android:text="@string/key" />

</RelativeLayout>